This is the commited changes on my javascript repo

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -54,7 +54,7 @@ header ul li:hover::after {
 .lskd7443 {
     height: 500px;
     width: 100%;
-    background-image: url("../images/space-6951379_640.jpg");
+    background-image: url("../images/red-blue-form-background.png");
     background-size: cover;
 }
 
